fix footer width on tablet view

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -77,13 +77,13 @@
   .footerInfo {
     flex-direction: row;
     justify-content: space-between;
-    width: 98%;
+    width: 100%;
   }
 
   .socialContent {
     flex-direction: row;
     justify-content: space-between;
-    width: 98%;
+    width: 100%;
   }
 
   .footerLinks {
